Stop sidebar scrolling sideways
* Shows horizontal scroll bar when showing break-word wrapped share link in share your program page

--- a/resources/main.css
+++ b/resources/main.css
@@ -133,6 +133,7 @@ h1 a {
   position: fixed;
   right: 0;
   width: 450px;
+  max-width: 450px;
   height: calc(100% - 31px);
   background-color: white;
   z-index: 2;
